<resources>
    <string name="app_name">Peluchitos Enterprise</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Peluchitos Enterprise</string>
    <string name="nav_header_subtitle">peluchitos.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="st_agregar">Agregar</string>
    <string name="id">id</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="st_buscar">Buscar</string>
    <string name="st_eliminar">Eliminar</string>
    <string name="st_inventario">Inventario</string>
    <string name="st_head">Id: Nombre: Cant: Precio</string>
</resources>
