<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/st_agregar" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/st_buscar" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/st_eliminar" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_storage_black_24dp"
            android:title="@string/st_inventario" />
    </group>


</menu>
